@@ -3,6 +3,8 @@ CHANGES.txt - 2008-11-02
 
 CHANGES IN HTMLDOC v1.9b1
 
+	- HTMLDOC no longer terminates comments when it sees only
+	  "->" on the end (STR #181)
 	- Fixed handling of percent-encoded URLs (STR #186)
 	- HTMLDOC now provides much better support for
 	  "wrapping" of text around images and new support for
